fix contrast ratio

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ h2 {
 }
 
 .btn-secondary {
-  background-color: grey !important;
+  background-color: rgb(83, 82, 82) !important;
   color: white !important;
   margin-bottom: 0 !important; 
 }
