--- a/src/components/Testimonials.css
+++ b/src/components/Testimonials.css
@@ -64,6 +64,7 @@
 
 .company {
   font-size: 1.2rem;
+  font-weight: 500;
   color: var(--secondary-color);
   line-height: 1.8;
 }
